# wyrd

./: .gitignore  CMakeLists.txt  Cargo.toml  Package.swift  README.md
.cargo/: config
Sources/apps/: CMakeLists.txt
Sources/apps/swiftwyrd/: main.swift
Tests/: LinuxMain.swift
Tests/wyrdTests/: wyrdTests.swift
apps/: CMakeLists.txt
apps/tester/: CMakeLists.txt  catch.hpp  tester.cpp
cmake_includes/: fetch_utils.cmake  file_utils.cmake
cpp_src/apps/tester/: CMakeLists.txt  tester.cpp
cpp_src/apps/tester/level0/binify/: test_binify_c.cpp
cpp_src/libs/: CMakeLists.txt
cpp_src/libs/level1/: CMakeLists.txt
libs/: CMakeLists.txt
libs/level0/: CMakeLists.txt
libs/level0/cmdlineshell/: CMakeLists.txt
libs/level0/core/: CMakeLists.txt
libs/level0/core/core/: any.h  (+8 more)
libs/level0/lz4/: CMakeLists.txt
libs/level0/tinyformat/: CMakeLists.txt
libs/level0/tinystl/: CMakeLists.txt
live/test_data/: test.txt
src/apps/: CMakeLists.txt
src/apps/tester/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/level0/cmdlineshell/: CMakeLists.txt
src/libs/level0/cmdlineshell/cppinclude/cmdlineshell/: cmdlineshell.hpp
src/libs/level0/cmdlineshell/include/cmdlineshell/: cmdlineshell.h
src/libs/level0/cmdlineshell/src/: cmdlineshell.c
src/libs/level0/guishell/: CMakeLists.txt
src/libs/level0/guishell/cppinclude/guishell/: guishell.hpp  platform.hpp  window.hpp
src/libs/level0/guishell/include/guishell/: guishell.h  platform.h  window.h
src/libs/level0/guishell/src/: guishell.cpp
src/libs/level0/guishell/src/apple/: appdelegate.m  macapp.hpp  macapp.mm
src/libs/level0/guishell/src/apple/macresources/: Info.plist.in  MainMenu.nib  MainMenu.xib
src/libs/level0/guishell/src/windows/: windows.cpp
src/libs/level0/guishell/tests/: test_guishell.cpp
src/libs/level0/spirvtools/: CMakeLists.txt
src/libs/level0/spirvtools/include/spirvtools/: spirvtools.h
src/libs/level0/spirvtools/src/: spirvtools.cpp
src/libs/level1/: CMakeLists.txt
src/libs/level2/theforge/: CMakeLists.txt
src/libs/level2/theforge/cppinclude/theforge/: image_enums.hpp  renderer.hpp  renderer_enums.hpp  renderer_structs.hpp  shader_reflection.hpp
src/libs/level2/theforge/include/theforge/: image_enums.h  renderer.h  renderer_descs.h  renderer_enums.h  renderer_structs.h  shader_reflection.h
src/libs/level2/theforge/src/: alloc_utils.hpp  c_api.cpp  dynamic_memory_allocator.cpp  dynamic_memory_allocator.hpp  renderer_d3d11.hpp  renderer_vulkan.cpp  renderer_vulkan.hpp  resource_loader.cpp  resource_loader.h  shader_reflection.cpp  utils.cpp  utils.hpp
src/libs/level2/theforge/src/Direct3D11/: Direct3D11.cpp
src/libs/level2/theforge/src/Image/: image.cpp  image.h
src/libs/level2/theforge/src/Metal/: cmds.hpp  cmds.mm  cpp_api.mm  memory_allocator.hpp  raytracing.mm  renderer.hpp  renderer.mm  shader_reflection.mm  utils.hpp  utils.mm
src/libs/level2/theforge/src/allocator/: allocator.cpp  allocator.hpp  allocator_pool.hpp  config.hpp  dynamic_allocator.cpp  resource_allocator.hpp  stats.hpp
src/libs/level2/theforge/tests/: test_theforge.cpp
src/libs/level3/theforge/: CMakeLists.txt
src/libs/level3/theforge/cppinclude/theforge/: raytracer.hpp  renderer.hpp  renderer_descs.hpp  renderer_enums.hpp  renderer_structs.hpp
src/libs/level3/theforge/cppinclude/theforge/metal/: descriptor.hpp  descriptor_manager.hpp  renderer.hpp  structs.hpp  utils.hpp
src/libs/level3/theforge/cppinclude/theforge/vulkan/: descriptor_manager.hpp  renderer.hpp  structs.hpp  utils.hpp
src/libs/level3/theforge/include/theforge/: raytracer.h  renderer.h  renderer_descs.h  renderer_enums.h  renderer_structs.h  shader_reflection.h
src/libs/level3/theforge/src/: GpuProfiler.cpp  c_api.cpp  shader_reflection.cpp  utils.hpp
src/libs/level3/theforge/src/Direct3D11/: Direct3D11Commands.h
src/libs/level3/theforge/src/Direct3D12/: Direct3D12.cpp  Direct3D12MemoryAllocator.h
src/libs/level3/theforge/src/Metal/: cmds.mm  cpp_api.mm  descriptor_manager.mm  raytracing.mm  renderer.hpp  renderer.mm  structs.hpp
src/libs/level3/theforge/src/direct3d11/: Direct3D11Raytracing.cpp  Direct3D11ShaderReflection.cpp
src/libs/level3/theforge/src/metal/: cmds.mm  cpp_api.mm  descriptor.mm  descriptor_manager.mm  memory_allocator.hpp  raytracing.mm  renderer.mm  shader_reflection.mm  utils.mm
src/libs/level3/theforge/src/vulkan/: Vulkan.cpp  raytracing.cpp  renderer.cpp  shader_reflection.cpp
src/libs/level3/theforge/tests/: test_theforge.cpp
src/libs/level4/theforge_display/: CMakeLists.txt
src/libs/level4/theforge_display/cppinclude/theforge_display/: theforge_display.hpp
src/libs/level4/theforge_display/cppinclude/theforge_display/metal/: metal.hpp
src/libs/level4/theforge_display/include/theforge_display/: theforge_display.h
src/libs/level4/theforge_display/src/: c_api.cpp
src/libs/level4/theforge_display/src/metal/: cpp_api.mm  metal.mm
src/libs/level4/theforge_resourceloader/: CMakeLists.txt
src/libs/level4/theforge_resourceloader/cppinclude/theforge_resourceloader/: theforge_resourceloader.hpp
src/libs/level4/theforge_resourceloader/include/theforge_resourceloader/: theforge_resourceloader.h
src/libs/level4/theforge_resourceloader/src/: c_api.cpp  resource_loader.cpp
src/libs/level4/theforge_resourceloader/tests/: test_theforgeresourceloader.cpp
src/libs/level4/theforge_shaderreflection/: CMakeLists.txt
src/libs/level4/theforge_shaderreflection/cppinclude/theforge_shaderreflection/: theforge_shaderreflection.hpp
src/libs/level4/theforge_shaderreflection/include/theforge_shaderreflection/: theforge_shaderreflection.h
src/libs/level4/theforge_shaderreflection/src/: c_api.cpp  theforge_shaderreflection.cpp  theforge_shaderreflection.hpp
src/libs/level4/theforge_shaderreflection/src/metal/: theforge_shaderreflection.mm
src/libs/level4/theforgeresourceloader/: CMakeLists.txt
src/libs/level4/theforgeresourceloader/src/: resource_loader.h
swift_src/: Package.swift  swiftbuild
theforge/: CMakeLists.txt
theforge/src/: renderer_d3d12.hpp  renderer_metal.hpp
(+320 files in other folders)
