[package]
name = "wyrd"
version = "0.1.0"
authors = ["Dean Calver <me@deanoc.com>"]
edition = "2018"

[lib]
path = "src/dummy.rs"

[dependencies]
core = { path = "src/libs/level0/core" }
os = { path = "src/libs/level0/os" }
lz4 = { path = "src/libs/level0/lz4" }
logmanager = { path = "src/libs/level1/logmanager" }
